# nerfstudio

./: .gitignore  batch_eval_bruisefacto.sh  batch_process_videos.sh  batch_train_and_eval.sh  batch_train_bruisefacto.sh  environment.yml  pyproject.toml  visualize_bruisefacto_experiments.py
nerfstudio/bruisefacto/: pyproject.toml
nerfstudio/bruisefacto/bruisefacto/: bruise_eval.py  bruise_eval_utils.py  bruisefacto.py  bruisefacto_config.py  bruisefacto_datamanager.py  bruisefacto_exporter.py  bruisefacto_pipeline.py
nerfstudio/configs/: method_configs.py
nerfstudio/data/datamanagers/: full_images_datamanager.py
nerfstudio/data/dataparsers/: nerfstudio_dataparser.py
nerfstudio/exporter/: exporter_utils.py
nerfstudio/model_components/: losses.py
nerfstudio/models/: splatfacto.py
nerfstudio/pipelines/: base_pipeline.py
nerfstudio/process_data/: colmap_utils.py  video_to_nerfstudio_dataset.py  video_to_nerfstudio_dataset_bruisefacto.py  video_to_nerfstudio_dataset_yolo.py
nerfstudio/scripts/: eval.py  exporter.py  process_data.py
nerfstudio/utils/: eval_utils.py
nerfstudio/viewer/: utils.py
